<?xml version="1.0" encoding="utf-8"?>
<!-- 1 change login layout-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_login_bg"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bgContentDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_title_margin_top"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_title_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#99000000"
        android:orientation="vertical"
        android:paddingBottom="@dimen/login_bottom_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/login_top_margin">

        <!-- 1 cách đổi màu cho text hint, text-->
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/grey_white"
            android:textColorHint="@color/grey_white"/>

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/grey_white"
            android:textColorHint="@color/grey_white"/>

        <!-- 2 làm cho button 4 góc tròn-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_button_margin_top"
            app:cardCornerRadius="@dimen/activity_vertical_margin"
            app:cardElevation="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_white"
                android:text="@string/login_signup_button"/>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_forgot_password_top"
            android:text="@string/login_forgot_password_tv"
            android:textColor="@color/grey_white"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/login_register_button"
        app:cardCornerRadius="@dimen/activity_vertical_margin"
        app:cardElevation="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_white"
            android:text="@string/login_register_button"/>
    </android.support.v7.widget.CardView>
</FrameLayout>
